商品详情页

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         </activity>
         <activity android:name=".feature.search.SearchGoodsActivity">
         </activity>
+        <activity android:name=".feature.goods.GoodsActivity">
+        </activity>
     </application>
 
 </manifest>
